objects/OrderDetails__x.object
<CustomObject>
    <fields>
        <fullName>orderID__c</fullName>
        <description>orderID</description>
        <externalDeveloperName>orderID</externalDeveloperName>
        <label>orderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>orderLine__c</fullName>
        <description>orderLine</description>
        <externalDeveloperName>orderLine</externalDeveloperName>
        <label>orderLine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <description>product</description>
        <externalDeveloperName>product</externalDeveloperName>
        <label>product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <description>quantity</description>
        <externalDeveloperName>quantity</externalDeveloperName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitPrice__c</fullName>
        <description>unitPrice</description>
        <externalDeveloperName>unitPrice</externalDeveloperName>
        <label>unitPrice</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <description>OrderDetails</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>OrderDetails</externalName>
    <label>OrderDetails</label>
    <pluralLabel>OrderDetails</pluralLabel>
</CustomObject>